# users-service

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: users.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: ca05c0ba0c41_init.py  d86729e1c283_rimosso_full_name_aggiunti_name_surname_.py
app/models/: user.py
app/schemas/: user.py
app/services/: broker.py  http_client.py  user_service.py
tests/: conftest.py  test_db_schema.py  test_users.py
