[project]
name = "servizio-template"
version = "0.1.0"
description = "Template dei servizi FastAPI orientati"
authors = [
    {name = "Federico Zorgnotto",email = "f.zorgnotto.2759@vallauri.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "sentry-sdk (>=2.35.0,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "orjson (>=3.11.2,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.17.1"
flake8 = "^7.3.0"

[tool.poetry]
package-mode = false

